# Sui-Full-Chain-Incomplete-Information-Cards-Game

./: .gitignore  LICENSE  README.md  package.json
backend/: Cargo.toml
backend/src/: handlers.rs  models.rs  routers.rs  state.rs
contract/: Move.toml  readme.md
contract/sources/: deck.move  game_state.move
contract/tests/: contract_tests.move
crypto_sdk/: package.json  tsconfig.json  webpack.config.d.ts  webpack.config.js
crypto_sdk/dist.esm/: deck.d.ts  deck.js  deck.js.map  index.d.ts  index.js  index.js.map  plaintext.d.ts  plaintext.js  plaintext.js.map  proof.d.ts  proof.js  proof.js.map  utilities.d.ts  utilities.js  utilities.js.map  zkshuffle.d.ts  zkshuffle.js  zkshuffle.js.map
crypto_sdk/src/: deck.ts  plaintext.ts  proof.ts  utilities.ts  zkshuffle.ts
crypto_sdk/test/: 1p.ts  2p.ts  3p.ts  get_const.ts  verify.ts
frontend/: README.md  craco.config.js  package.json
frontend/src/: App.css  App.js  index.js
frontend/src/api/: index.js  server.js
frontend/src/components/Footer/: index.css  index.js
frontend/src/components/Header/: index.css  index.js
frontend/src/components/PokerList/: style.css
frontend/src/components/Seat/: index.jsx
frontend/src/components/SeatList/: index.jsx
frontend/src/pages/Home/: index.jsx  style.css
frontend/src/pages/Room/: index.jsx
frontend/src/pages/Room/GamingRoom/: Operation.jsx  index.jsx  style.css
frontend/src/utils/: constants.js  poker.js  use-set-role.js  websocket.js  zkp_onchain.js
zkshuffle/: build.sh  package.json
zkshuffle/circuits/: suitest.circom
(+2 files in other folders)
