[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
num-bigint = "0.4.3"
ark-bn254 = "0.4.0"
ark-groth16 = "0.4.0"
ark-snark = "0.4.0"
ark-circom = "0.1.0"
ark-serialize = "0.4.1"
serde = { version = "1.0.200", features = ["derive"] }
actix-web = "4.5.1"
actix-rt = "2.9.0"
base64 = "0.22.1"
ark-ec = "0.4.1"

[[bin]]
name = "zkshuffle"
